# udcinput

./: .clang-format  CMakeLists.txt  README.md
include/: udcinput.h  udcinput.hpp
include-private/udcinput/: buf_p.h  hid.h  log_p.h  util.h
include/udcinput/: buf.h  log.h
src/: hid.c  log.c  udcinput.c  util.c
src/gamepads/: switchpro.c
